k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student-mgmt
  labels:
    name: student-mgmt
